moved requests dtos back to entity package
